--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Preeti Reddy</title>
+  </head>
+  
+  <body>
+    Hello World!
+  </body>
+</html>
+<body>
+  <h1>Iam Preeti Reddy</h1>
+  <h4>M.Sc Biotechnology Student</h4>
+</body>
